--- a/Cuso_CSS/style.css
+++ b/Cuso_CSS/style.css
@@ -25,7 +25,7 @@ div h2, div h3 { /* Asi estiliso mas de un elemento */
 
 *{   /* Asi seleccionamos TODOS los elementos del body, selector universal */ 
     font-size: 24px;
-    color:black; 
+    /* color:black;  */
 } 
 /* El selector Universal aplica propiedades SOLO si no hay sido definidas 
 por otros selectores*/
@@ -64,4 +64,124 @@ Formas de asignar color
     height: 300px;
     background: #f00 url("Imagenes/coffee.png") repeat-y center bottom / 100px 100px;
     background-size: 100px 100px;
+}
+
+.margen {
+    background-color: chocolate;
+    margin: 15px;
+    padding: 30px 15px 5px;
+    border: solid 1px black;
+    height: 100px;
+    width: 50px;
+    overflow: scroll;
+    outline: solid 1px red;
+}
+.text {
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+    text-decoration: overline;
+    text-shadow: 3px 5px 3px blue;
+}
+
+a:link {
+    color: blueviolet;
+}
+
+a:visited {
+    color: gray;
+}
+
+a:hover {
+    color: green;
+}
+
+a:active {
+    color: red;
+}
+
+ul {
+    background-color: cyan;
+    list-style-type: upper-roman;
+    /* padding-left: 0; */
+    /* list-style-position: inside; */
+}
+
+table {
+    width: 100%;
+    border-collapse: collapse;
+
+}
+
+th, td {
+    border: solid 1px #eee;
+    padding: 5px;
+}
+th {
+    background-color: tomato;
+    color: white;
+    text-align: left;
+}
+
+tr:nth-child(even){
+    background-color: #eee;
+}
+
+tr:hover {
+    background-color: #aaa;
+    cursor: pointer;
+}
+
+span {
+    display: block;
+    /* display: none; */
+    /* visibility: hidden;*/
+    max-width: 300px;
+    background-color: red;
+}
+
+.inline {
+    display: inline;
+}
+
+#position {
+    position: sticky;
+    left: 20px;
+    top: 25px;
+
+}
+
+.left {
+    float: left;
+    width: 200px;
+    height: 200px;
+}
+
+.right {
+    float: right;
+}
+
+.container {
+    height: 200px;
+}
+
+.column {
+    border: solid 1px #ddd;
+    border-radius: 5px;
+    margin: 0;
+    padding: 10px 0;
+    width: 33%;
+}
+
+.inline-block {
+    display: inline-block;
+    height: 55px;
+    background-color: red;
+}
+
+.center{
+    padding: 50px 0;
+    text-align: center;
+    width: 200px;
+    margin: 0 auto;
+    background-color: aqua;
 }
